@@ -23,6 +23,7 @@ Jump Start Changelog
 * Fixed: Slider option type not allowing you to inert images less than 200px wide. This was most evident when trying to use the Partner Logos element in the Builder and using small logo images.
 * Fixed: When a layout section has repeating background set to parallax, it would get stretched on mobile.
 * Fixed: "Preview Changes" not working correctly when inserting current page's content into custom layout.
+* Fixed: "Save as Draft" not working for custom layout pages.
 * The following functions have been deleted. These functions were simply action wrappers. For the most part, as long as you haven't (as suggested not to do) moved main template files header.php, footer.php, sidebar-right.php, or sidebar-left.php to your child theme, this shouldn't effect you.
 	* `themeblvd_head()`
 	* `themeblvd_before()`
